LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/GM_LOCATIONS__x.object-meta.xml
<CustomObject>
    <description>GM_LOCATIONS</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_LOCATIONS</externalName>
    <label>GM_LOCATIONS</label>
    <pluralLabel>GM_LOCATIONS</pluralLabel>
</CustomObject>