LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/ADMINISTRATOR__c.field-meta.xml
<CustomField>
    <fullName>ADMINISTRATOR__c</fullName>
    <description>ADMINISTRATOR</description>
    <externalDeveloperName>ADMINISTRATOR</externalDeveloperName>
    <label>ADMINISTRATOR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>