LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/CITY_CODE__c.field-meta.xml
<CustomField>
    <fullName>CITY_CODE__c</fullName>
    <description>CITY_CODE</description>
    <externalDeveloperName>CITY_CODE</externalDeveloperName>
    <label>CITY_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>