LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/DS_TEAM_HEAD_PIPE_2__c.field-meta.xml
<CustomField>
    <fullName>DS_TEAM_HEAD_PIPE_2__c</fullName>
    <description>DS_TEAM_HEAD_PIPE_2</description>
    <externalDeveloperName>DS_TEAM_HEAD_PIPE_2</externalDeveloperName>
    <label>DS_TEAM_HEAD_PIPE_2</label>
    <length>8</length>
    <type>Text</type>
</CustomField>