LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/ITSUPORT_MAIL_ID__c.field-meta.xml
<CustomField>
    <fullName>ITSUPORT_MAIL_ID__c</fullName>
    <description>ITSUPORT_MAIL_ID</description>
    <externalDeveloperName>ITSUPORT_MAIL_ID</externalDeveloperName>
    <label>ITSUPORT_MAIL_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>