LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/LOC_MID_NO__c.field-meta.xml
<CustomField>
    <fullName>LOC_MID_NO__c</fullName>
    <description>LOC_MID_NO</description>
    <externalDeveloperName>LOC_MID_NO</externalDeveloperName>
    <label>LOC_MID_NO</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>