LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/LOCATION_DESC__c.field-meta.xml
<CustomField>
    <fullName>LOCATION_DESC__c</fullName>
    <description>LOCATION_DESC</description>
    <externalDeveloperName>LOCATION_DESC</externalDeveloperName>
    <label>LOCATION_DESC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>