LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/LOCATION_MID__c.field-meta.xml
<CustomField>
    <fullName>LOCATION_MID__c</fullName>
    <description>LOCATION_MID</description>
    <externalDeveloperName>LOCATION_MID</externalDeveloperName>
    <label>LOCATION_MID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>