LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/LOCATION_PER__c.field-meta.xml
<CustomField>
    <fullName>LOCATION_PER__c</fullName>
    <description>LOCATION_PER</description>
    <externalDeveloperName>LOCATION_PER</externalDeveloperName>
    <label>LOCATION_PER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>