LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/LOCATION_SUB_DESC__c.field-meta.xml
<CustomField>
    <fullName>LOCATION_SUB_DESC__c</fullName>
    <description>LOCATION_SUB_DESC</description>
    <externalDeveloperName>LOCATION_SUB_DESC</externalDeveloperName>
    <label>LOCATION_SUB_DESC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>