LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/OLP_ID__c.field-meta.xml
<CustomField>
    <fullName>OLP_ID__c</fullName>
    <description>OLP_ID</description>
    <externalDeveloperName>OLP_ID</externalDeveloperName>
    <label>OLP_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>