LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/REGION_ID_2__c.field-meta.xml
<CustomField>
    <fullName>REGION_ID_2__c</fullName>
    <description>REGION_ID_2</description>
    <externalDeveloperName>REGION_ID_2</externalDeveloperName>
    <label>REGION_ID_2</label>
    <length>8</length>
    <type>Text</type>
</CustomField>