LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/REGION_ID__c.field-meta.xml
<CustomField>
    <fullName>REGION_ID__c</fullName>
    <description>REGION_ID</description>
    <externalDeveloperName>REGION_ID</externalDeveloperName>
    <label>REGION_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>