LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/REMARKS__c.field-meta.xml
<CustomField>
    <fullName>REMARKS__c</fullName>
    <description>REMARKS</description>
    <externalDeveloperName>REMARKS</externalDeveloperName>
    <label>REMARKS</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>