LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/SCHEDULAR_MANAGER__c.field-meta.xml
<CustomField>
    <fullName>SCHEDULAR_MANAGER__c</fullName>
    <description>SCHEDULAR_MANAGER</description>
    <externalDeveloperName>SCHEDULAR_MANAGER</externalDeveloperName>
    <label>SCHEDULAR_MANAGER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>