LinKreta_POC_Repository/force-app/main/default/objects/GM_LOCATIONS__x/fields/TELE_NO__c.field-meta.xml
<CustomField>
    <fullName>TELE_NO__c</fullName>
    <description>TELE_NO</description>
    <externalDeveloperName>TELE_NO</externalDeveloperName>
    <label>TELE_NO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>